<resources>
    <string name="app_name">ZPD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Atsauces</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="tema_1">Saskaitīšanas likums</string>
    <string name="tema_2">Reizināšanas likums</string>
    <string name="tema_5">Izlases</string>
    <string name="tema_6">Permutācijas</string>
    <string name="tema_7">Kombinācijas</string>
    <string name="title_activity_izvelne">Izvēlne</string>
    <string name="iestatijumi">Atsauces</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="exit">Iziet</string>
    <string name="title_activity_tests_izvelne">Tēmu izvēlne</string>
    <string name="title_activity_jautajumu">JautajumuActivity</string>
    <string name="tema_3">Skaitļa faktoriāls</string>
    <string name="tema_4">Visas tēmas</string>
    <string name="title_activity_rezultats">Rezultāts</string>
    <string name="pirma_atsauce">Āboltiņa, B., Kriķis, D., Šteiners, K. <i>Matemātika 11.klasei.</i> Rīga: Zvaigzne ABC, 2012. 126.-161.lpp. ISBN 978-9934-0-2256-2</string>
    <string name="otra_atsauce">Slokenberga, E., France, I., France, I. <i>Matemātika 11.klasei.</i> Lielvārde: Lielvārds, 2010. 100.-127.lpp. ISBN 978-9984-11-289-3</string>
    <string name="tresa_atsauce">Uzdevumi.lv <i>Kombinatorikas elementi 1</i> [tiešsaiste]. [Skatīts 21.02.2015]. Pieejams:http://www.uzdevumi.lv/p/matematika/11-klase/kombinatorikas-elementi-1-2162</string>
    <string name="ceturta_atsauce">Vasiļevskis, G. <i>Mācību līdzeklis vidusskolām kombinatorikā</i> [tiešsaiste]. [Skatīts 01.02.2015]. Pieejams: http://nms.lu.lv/wp-content/uploads/2014/06/kombinat_9-12kl.pdf</string>
    <string name="a1p0">Kāds likums ir jāizmanto, lai izvēlētos vienu elementu no divām grupām?</string>
    <string name="a1p1">Reizināšanas likums</string>
    <string name="a1p2">Saskaitīšanas likums</string>
    <string name="a1p3">Dalīšanas likums</string>
    <string name="a1p4">2</string>
    <string name="a1p5">Ja nepieciešams izvēlēties vienu elementu no pirmās vai otrās grupas, tad to var izdarīt, izmantojot saskaitīšanas likumu</string>
    <string name="a1p6">0</string>
    <string name="a2p0">Cik veidos var izvēlēties elementu pāri, kurā ir pa vienam elementam no katras grupas?</string>
    <string name="a2p1">n*k veidos</string>
    <string name="a2p2">n+k veidos</string>
    <string name="a2p3">n-k veidos</string>
    <string name="a2p4">1</string>
    <string name="a2p5">Ja nepieciešams izvēlēties abu elementu pāri kopā, tad to var izvēlēties n*k dažādos veidos</string>
    <string name="a2p6">0</string>
    <string name="a3p0">Grozā ir 8 āboli un 4 mandarīni. Cik dažādos variantos var izvēlēties vienu augli?</string>
    <string name="a3p1">32 veidos</string>
    <string name="a3p2">12 veidos</string>
    <string name="a3p3">8 veidos</string>
    <string name="a3p4">2</string>
    <string name="a3p5">Lai izvēlētos vienu augli ir jāizmanto saskaitīšanas likums =>  8+4=12 veidos var izvēlēties vienu augli.</string>
    <string name="a3p6">1</string>
    <string name="a4p0">Somā ir 24 banāni un 2 bumbieri. Cik dažādos variantos var izvēlēties banānus?</string>
    <string name="a4p1">32 veidos</string>
    <string name="a4p2">12 veidos</string>
    <string name="a4p3">24 veidos</string>
    <string name="a4p4">3</string>
    <string name="a4p5">Banānus var izvēlēties tikai 24 reizes, jo somā atrodas 24 banāni.</string>
    <string name="a4p6">0</string>
    <string name="a5p0">Uz galda ir 5 veidu līniju un 7 veidu rūtiņu burtnīcas. Cik dažādos variantos var izvēlēties vienu līniju burtnīcu un vienu rūtiņu burtnīcu?</string>
    <string name="a5p1">21</string>
    <string name="a5p2">35</string>
    <string name="a5p3">12</string>
    <string name="a5p4">2</string>
    <string name="a5p5">Lai izvēlētos vienu rūtiņu un vienu līniju burtnīcu ir jāizmanto reizināšanas likums, 5*7 = 35 veidos var izvēlēties.</string>
    <string name="a5p6">2</string>
    <string name="a6p0">Juris somā ielika 3 bikses, 4 kreklus, 2 kurpju pārus. Cik dažādos veidos Juris var apģērbties, ja viņš grib vilkt bikses, kreklu un kurpes?</string>
    <string name="a6p1">19</string>
    <string name="a6p2">12</string>
    <string name="a6p3">24</string>
    <string name="a6p4">3</string>
    <string name="a6p5">Juris var apģērbties 4*3*2=24 veidos.</string>
    <string name="a6p6">2</string>
    <string name="a7p0">Kā apzīmē skaitļa N faktoriālu?</string>
    <string name="a7p1">N</string>
    <string name="a7p2">N:</string>
    <string name="a7p3">N!</string>
    <string name="a7p4">3</string>
    <string name="a7p5">Skaitļa N faktoriālu apzīmē ar ! </string>
    <string name="a7p6">3</string>
    <string name="a8p0">Aprēķini! 3!*2!</string>
    <string name="a8p1">5</string>
    <string name="a8p2">6</string>
    <string name="a8p3">12</string>
    <string name="a8p4">3</string>
    <string name="a8p5">3!*2!=(1*2*3)*(1*2)=12</string>
    <string name="a8p6">3</string>
    <string name="a9p0">No 7 skolēniem tiek izveidota 3 skolēnu komanda. Kas tā ir par izlasi?</string>
    <string name="a9p1">Reizināšanas izlase</string>
    <string name="a9p2">Nesakārtota izlase</string>
    <string name="a9p3">Sakārtota izlase</string>
    <string name="a9p4">2</string>
    <string name="a9p5">Tā ir nesakārtota 3 elementu izlase, jo, samainot komandā divus skolēnus vietām, tā joprojām ir tā pati skolēnu komanda.</string>
    <string name="a9p6">4</string>
    <string name="a10p0">Vienā šķīvī atrodas 9 āboli, bet otrā - 30 mandarīni. Pēc brīvas izvēles izņem vienu augli no viena vai otra šķīvja. Cik veidos to var izdarīt?</string>
    <string name="a10p1">30</string>
    <string name="a10p2">39</string>
    <string name="a10p3">9</string>
    <string name="a10p4">2</string>
    <string name="a10p5">Ir jāizmanto saskaitīšanas likums, n+k=9+30=39 veidos</string>
    <string name="a10p6">1</string>
    <string name="a11p0">Cik dažādos atšķirīgos veidos var izvēlēties pusdienu ēdienkarti, ja ir trīs 1.ēdieni, pieci 2.ēdieni un četri 3.ēdieni?</string>
    <string name="a11p1">60</string>
    <string name="a11p2">30</string>
    <string name="a11p3">120</string>
    <string name="a11p4">1</string>
    <string name="a11p5">n*k*m=3*5*4=60 veidos var izvēlēties</string>
    <string name="a11p6">2</string>
    <string name="a12p0">Pilsētas A un B savieno divi asfaltēti ceļi un pieci zemesceļi. Cik dažādos veidos var aizbraukt no pilsētas A uz pilsētu B?</string>
    <string name="a12p1">2</string>
    <string name="a12p2">7</string>
    <string name="a12p3">5</string>
    <string name="a12p4">2</string>
    <string name="a12p5">Var aizbraukt 7 veidos</string>
    <string name="a12p6">1</string>
    <string name="a13p0">Cik dažādu trīsciparu skaitļu var izveidot no cipariem 1, 2, 3 un 4?</string>
    <string name="a13p1">12</string>
    <string name="a13p2">64</string>
    <string name="a13p3">9</string>
    <string name="a13p4">2</string>
    <string name="a13p5">4*4*4=64 skaitļus</string>
    <string name="a13p6">2</string>
    <string name="a14p0">Cik dažādu kodu (vārdu) var izveidot no burtiem A, R, Z, ja burti nedrīkst atkārtoties?</string>
    <string name="a14p1">3</string>
    <string name="a14p2">6</string>
    <string name="a14p3">12</string>
    <string name="a14p4">2</string>
    <string name="a14p5">3*2*1=6 kodus</string>
    <string name="a14p6">2</string>
    <string name="a15p0">Klasē ir 7 vienvietīgie galdi. Cik veidos pie tiem var apsēsties pieci skolēni?</string>
    <string name="a15p1">120</string>
    <string name="a15p2">7</string>
    <string name="a15p3">2520</string>
    <string name="a15p4">3</string>
    <string name="a15p5">7*6*5*4*3=2570 veidos</string>
    <string name="a15p6">2</string>
    <string name="a16p0">Uz sporta stundu ir ieradušies 4 skolēni. Cik veidos viņi var nostāties ierindā?</string>
    <string name="a16p1">64</string>
    <string name="a16p2">4</string>
    <string name="a16p3">24</string>
    <string name="a16p4">3</string>
    <string name="a16p5">4*3*2=24 veidos</string>
    <string name="a16p6">2</string>
    <string name="a17p0">Noteikt, cik veidos 50 cilvēki var nostāties rindā?</string>
    <string name="a17p1">50!</string>
    <string name="a17p2">50</string>
    <string name="a17p3">10030</string>
    <string name="a17p4">1</string>
    <string name="a17p5">Cilvēki var nostāties rindā 50! veidos</string>
    <string name="a17p6">3</string>
    <string name="a18p0">Cik veidos 8 grāmatas var ielikt plauktā?</string>
    <string name="a18p1">8</string>
    <string name="a18p2">24</string>
    <string name="a18p3">8!</string>
    <string name="a18p4">3</string>
    <string name="a18p5">Grāmatas var ielikt plauktā 8! veidos</string>
    <string name="a18p6">3</string>
    <string name="a19p0">Aprēķināt! 14!/12!</string>
    <string name="a19p1">13!</string>
    <string name="a19p2">14!</string>
    <string name="a19p3">182</string>
    <string name="a19p4">3</string>
    <string name="a19p5">14!/12!=13*14=182</string>
    <string name="a19p6">3</string>
    <string name="a20p0">Vienkāršot izteiksmi! 5!-3!</string>
    <string name="a20p1">2!</string>
    <string name="a20p2">114</string>
    <string name="a20p3">6</string>
    <string name="a20p4">2</string>
    <string name="a20p5">5!-3!=114</string>
    <string name="a20p6">3</string>
    <string name="a21p0">Uzņēmuma valdē no 5 locekļiem jāizvēlas priekšsēdētājs un viņa vietnieks. Cik veidos to var izdarīt?</string>
    <string name="a21p1">20</string>
    <string name="a21p2">5!</string>
    <string name="a21p3">120</string>
    <string name="a21p4">1</string>
    <string name="a21p5">5*4=20 veidos var izvēlēties priekšsēdētāju un viņa vietnieku</string>
    <string name="a21p6">2</string>
    <string name="a22p0">Cik veidos no astoņām dažādām grāmatām var izvēlēties 3 un novietot trīs vietās grāmatu plauktā?</string>
    <string name="a22p1">3!</string>
    <string name="a22p2">6</string>
    <string name="a22p3">336</string>
    <string name="a22p4">3</string>
    <string name="a22p5">8*7*6=336 veidos</string>
    <string name="a22p6">2</string>
    <string name="a23p0">Klasē ir 20 skolēni. Cik dažādos veidos viņi var ievēlēt klases vecāko?</string>
    <string name="a23p1">20</string>
    <string name="a23p2">400</string>
    <string name="a23p3">20!</string>
    <string name="a23p4">1</string>
    <string name="a23p5">Katrs no skolēniem var būt klases vecākais</string>
    <string name="a23p6">1</string>
    <string name="a24p0">Jancis grib saģērbties. Viņam ir divas dažādas bikses, trīs dažādi svīteri un divi kurpju pāri. Cik dažādos veidos Jancis var saģērbties?</string>
    <string name="a24p1">16</string>
    <string name="a24p2">7</string>
    <string name="a24p3">12</string>
    <string name="a24p4">3</string>
    <string name="a24p5">Jancis var saģērbties 12 veidos, jo 2*3*2=12</string>
    <string name="a24p6">2</string>
    <string name="a25p0">Cik dažādu automašīnas numuru eksistē, kuri sastāv no pieciem dažādiem cipariem, ja pieļauj iespēju, ka pirmais cipars ir 1?</string>
    <string name="a25p1">1050</string>
    <string name="a25p2">625</string>
    <string name="a25p3">60</string>
    <string name="a25p4">2</string>
    <string name="a25p5">1*5*5*5*5=625</string>
    <string name="a25p6">1</string>
    <string name="a26p0">Cik veidos var plauktā ielikt 4 grāmatas A, B, C, D, ja grāmatām A un B ir jāatrodas blakus?</string>
    <string name="a26p1">256</string>
    <string name="a26p2">10</string>
    <string name="a26p3">16</string>
    <string name="a26p4">3</string>
    <string name="a26p5">4*4=16</string>
    <string name="a26p6">2</string>
    <string name="a27p0">Cik veidos, lietojot latīņu alfabēta burtus, var apzīmēt četrstūri?</string>
</resources>