<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />



        <!-- The main content view -->
        <RelativeLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
android:layout_margin="8dp"

            >


            <TextView
                android:id="@+id/atsauce_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pirma_atsauce"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/atsauce_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_below="@+id/atsauce_1"
                android:text="@string/otra_atsauce"
                />
            <TextView
                android:id="@+id/atsauce_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tresa_atsauce"
                android:textSize="20sp"
                android:layout_below="@+id/atsauce_2"
                />

            <TextView
                android:id="@+id/atsauce_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ceturta_atsauce"
                android:textSize="20sp"
                android:layout_below="@+id/atsauce_3"
                />

        </RelativeLayout>



    </LinearLayout>



    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView

        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer"
        app:headerLayout="@layout/nav_header"


        />



</android.support.v4.widget.DrawerLayout>