<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- The ActionBar -->
        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- The main content view -->
        <FrameLayout
            android:id="@+id/flContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <Button
                android:id="@+id/tema_1_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/tema_1"
                android:textSize="25sp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center|top"
                android:textColor="#fff"
                android:backgroundTint="@color/colorButton"
                android:onClick="tema1Pressed"
                />

            <Button
                  android:id="@+id/tema_2_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/tema_2"
                android:textSize="25sp"
android:layout_marginTop="80dp"
                android:layout_gravity="center|top"

                android:backgroundTint="@color/colorButton"
                android:textColor="#fff"
                android:colorButtonNormal="@color/colorButton"
                android:onClick="tema2Pressed"
                />

            <Button
                android:id="@+id/tema_3_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:layout_marginTop="145dp"
                android:layout_gravity="center|top"
                android:text="@string/tema_3"
                android:textSize="25sp"



                android:backgroundTint="@color/colorButton"
                android:textColor="#fff"
                android:colorButtonNormal="@color/colorButton"
                android:onClick="tema3Pressed"
                />

            <Button
                android:id="@+id/tema_5_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/tema_5"
                android:textSize="25sp"
                android:layout_marginTop="210dp"
                android:layout_gravity="center|top"
                android:textColor="#fff"
                android:backgroundTint="@color/colorButton"
                android:onClick="tema5Pressed"
                />

            <Button
                android:id="@+id/tema_6_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/tema_6"
                android:textSize="25sp"
                android:layout_marginTop="275dp"
                android:layout_gravity="center|top"
                android:textColor="#fff"
                android:backgroundTint="@color/colorButton"
                android:onClick="tema6Pressed"
                />

            <Button
                android:id="@+id/tema_7_button"
                android:layout_width="fill_parent"
                android:layout_height="70dp"
                android:text="@string/tema_7"
                android:textSize="25sp"
                android:layout_marginTop="340dp"
                android:layout_gravity="center|top"
                android:textColor="#fff"
                android:backgroundTint="@color/colorButton"
                android:onClick="tema7Pressed"
                />

            <Button
                android:id="@+id/visastemas"
                android:layout_width="fill_parent"
                android:layout_height="70dp"

                android:text="Visas tēmas"
                android:textSize="25sp"
                android:layout_marginTop="405dp"
                android:layout_gravity="center|top"

                android:backgroundTint="@color/colorButton"
                android:textColor="#fff"
                android:colorButtonNormal="@color/colorButton"
                android:onClick="VisasTemasPressed"
                android:visibility="gone" />

         <!--   <TextView
                android:text="Izvēlies tematu"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"

                />-->


        </FrameLayout>

    </LinearLayout>

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer"
        app:headerLayout="@layout/nav_header"

        />
</android.support.v4.widget.DrawerLayout>